--- a/Trab1_Igor_Dummer.ipynb
+++ b/Trab1_Igor_Dummer.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1e0b6afa",
    "metadata": {},
@@ -10,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "aaf382ac",
    "metadata": {},
    "outputs": [],
@@ -19,27 +20,27 @@
     "import pandas as pd\n",
     "from scipy import stats\n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import cross_val_score, RepeatedStratifiedKFold, StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score, RepeatedStratifiedKFold\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "89f474f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_splits = 10\n",
     "n_repeats = 3\n",
-    "n_estimators = [4,9,15,21]\n",
+    "n_estimators = [3,9,15,21]\n",
     "\n",
-    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
-    "skf = StratifiedKFold(n_splits=4)"
+    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2b4f5cfe",
    "metadata": {},
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9ca0a351",
    "metadata": {},
    "outputs": [],
@@ -58,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e01805be",
    "metadata": {},
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "05bd24e7",
    "metadata": {
     "scrolled": true
@@ -94,9 +96,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>i1</th>\n",
-       "      <th>i2</th>\n",
-       "      <th>i3</th>\n",
+       "      <th>df01</th>\n",
+       "      <th>df02</th>\n",
+       "      <th>df03</th>\n",
+       "      <th>df04</th>\n",
+       "      <th>df05</th>\n",
+       "      <th>df06</th>\n",
+       "      <th>df07</th>\n",
+       "      <th>df08</th>\n",
+       "      <th>df09</th>\n",
+       "      <th>df10</th>\n",
+       "      <th>...</th>\n",
        "      <th>i4</th>\n",
        "      <th>i5</th>\n",
        "      <th>i6</th>\n",
@@ -112,9 +122,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0,168083620456198</td>\n",
-       "      <td>0,000614508479637171</td>\n",
-       "      <td>0,00013077624387807</td>\n",
+       "      <td>0,0879606602603602</td>\n",
+       "      <td>0,0540590780493764</td>\n",
+       "      <td>0,0252096142058536</td>\n",
+       "      <td>0,0274713661921584</td>\n",
+       "      <td>0,0128341271697431</td>\n",
+       "      <td>0,00837372424071006</td>\n",
+       "      <td>0,00459165042660484</td>\n",
+       "      <td>0,00516286747775679</td>\n",
+       "      <td>0,00474694756923231</td>\n",
+       "      <td>0,00307480942393677</td>\n",
+       "      <td>...</td>\n",
        "      <td>5,71775104737315e-005</td>\n",
        "      <td>3,80815942436415e-009</td>\n",
        "      <td>-1,41733745231029e-006</td>\n",
@@ -128,9 +146,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0,164506924542429</td>\n",
-       "      <td>0,0010869024475826</td>\n",
-       "      <td>4,2876190463528e-005</td>\n",
+       "      <td>0,0183325142757933</td>\n",
+       "      <td>0,0641922380636373</td>\n",
+       "      <td>0,0213351158490625</td>\n",
+       "      <td>0,028934652413586</td>\n",
+       "      <td>0,012263060875406</td>\n",
+       "      <td>0,0112299899510848</td>\n",
+       "      <td>0,00356611493895844</td>\n",
+       "      <td>0,00586153710536664</td>\n",
+       "      <td>0,00374648636964241</td>\n",
+       "      <td>0,00377850078446776</td>\n",
+       "      <td>...</td>\n",
        "      <td>1,01157608366481e-008</td>\n",
        "      <td>-5,39593107944031e-015</td>\n",
        "      <td>-6,85966112547544e-011</td>\n",
@@ -144,44 +170,59 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  i1                    i2                    i3  \\\n",
-       "0  0,168083620456198  0,000614508479637171   0,00013077624387807   \n",
-       "1  0,164506924542429    0,0010869024475826  4,2876190463528e-005   \n",
+       "                 df01                df02                df03  \\\n",
+       "0  0,0879606602603602  0,0540590780493764  0,0252096142058536   \n",
+       "1  0,0183325142757933  0,0641922380636373  0,0213351158490625   \n",
        "\n",
-       "                      i4                      i5                      i6  \\\n",
-       "0  5,71775104737315e-005   3,80815942436415e-009  -1,41733745231029e-006   \n",
-       "1  1,01157608366481e-008  -5,39593107944031e-015  -6,85966112547544e-011   \n",
+       "                 df04                df05                 df06  \\\n",
+       "0  0,0274713661921584  0,0128341271697431  0,00837372424071006   \n",
+       "1   0,028934652413586   0,012263060875406   0,0112299899510848   \n",
        "\n",
-       "                      i7            probmax           energia  \\\n",
-       "0  3,15336969940052e-009  0,890374128851521  3,17034178175013   \n",
-       "1  3,90722879150443e-015  0,874335002692948  3,05605231787486   \n",
+       "                  df07                 df08                 df09  \\\n",
+       "0  0,00459165042660484  0,00516286747775679  0,00474694756923231   \n",
+       "1  0,00356611493895844  0,00586153710536664  0,00374648636964241   \n",
        "\n",
-       "           entropia          contraste     homogeneidade            correlacao  \n",
-       "0   6,5716176171224  -30,7129899022437  3,76304934586401   0,00030352446061056  \n",
-       "1  7,56143396285353  -37,1051952158663  3,72262223245045  0,000268692571829909  "
+       "                  df10  ...                     i4                      i5  \\\n",
+       "0  0,00307480942393677  ...  5,71775104737315e-005   3,80815942436415e-009   \n",
+       "1  0,00377850078446776  ...  1,01157608366481e-008  -5,39593107944031e-015   \n",
+       "\n",
+       "                       i6                     i7            probmax  \\\n",
+       "0  -1,41733745231029e-006  3,15336969940052e-009  0,890374128851521   \n",
+       "1  -6,85966112547544e-011  3,90722879150443e-015  0,874335002692948   \n",
+       "\n",
+       "            energia          entropia          contraste     homogeneidade  \\\n",
+       "0  3,17034178175013   6,5716176171224  -30,7129899022437  3,76304934586401   \n",
+       "1  3,05605231787486  7,56143396285353  -37,1051952158663  3,72262223245045   \n",
+       "\n",
+       "             correlacao  \n",
+       "0   0,00030352446061056  \n",
+       "1  0,000268692571829909  \n",
+       "\n",
+       "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lista de Indices\n",
-    "# FOURIER = ['df01', 'df02', 'df03', 'df04','df05', 'df06', 'df07', 'df08', 'df09', 'df10']\n",
+    "FOURIER = ['df01', 'df02', 'df03', 'df04','df05', 'df06', 'df07', 'df08', 'df09', 'df10']\n",
     "HU = ['i1', 'i2', 'i3', 'i4','i5', 'i6', 'i7']\n",
     "HARALICK = ['probmax', 'energia', 'entropia', 'contraste','homogeneidade', 'correlacao']\n",
-    "ALL = HU + HARALICK\n",
+    "ALL = FOURIER + HU + HARALICK\n",
     "\n",
     "df[ALL].head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d128d06e",
    "metadata": {},
    "outputs": [],
@@ -194,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a93559a0",
    "metadata": {},
    "outputs": [
@@ -216,7 +257,7 @@
        "Name: classe, Length: 297, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "73fdad3f",
    "metadata": {
     "scrolled": false
@@ -237,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64')]\n"
+      "[dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64')]\n"
      ]
     },
     {
@@ -261,9 +302,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>i1</th>\n",
-       "      <th>i2</th>\n",
-       "      <th>i3</th>\n",
+       "      <th>df01</th>\n",
+       "      <th>df02</th>\n",
+       "      <th>df03</th>\n",
+       "      <th>df04</th>\n",
+       "      <th>df05</th>\n",
+       "      <th>df06</th>\n",
+       "      <th>df07</th>\n",
+       "      <th>df08</th>\n",
+       "      <th>df09</th>\n",
+       "      <th>df10</th>\n",
+       "      <th>...</th>\n",
        "      <th>i4</th>\n",
        "      <th>i5</th>\n",
        "      <th>i6</th>\n",
@@ -290,14 +339,30 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>355</th>\n",
-       "      <td>0.168084</td>\n",
-       "      <td>0.000615</td>\n",
-       "      <td>0.000131</td>\n",
+       "      <td>0.087961</td>\n",
+       "      <td>0.054059</td>\n",
+       "      <td>0.025210</td>\n",
+       "      <td>0.027471</td>\n",
+       "      <td>0.012834</td>\n",
+       "      <td>0.008374</td>\n",
+       "      <td>0.004592</td>\n",
+       "      <td>0.005163</td>\n",
+       "      <td>0.004747</td>\n",
+       "      <td>0.003075</td>\n",
+       "      <td>...</td>\n",
        "      <td>5.717751e-05</td>\n",
        "      <td>3.808159e-09</td>\n",
        "      <td>-1.417337e-06</td>\n",
@@ -311,9 +376,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>356</th>\n",
-       "      <td>0.164507</td>\n",
-       "      <td>0.001087</td>\n",
-       "      <td>0.000043</td>\n",
+       "      <td>0.018333</td>\n",
+       "      <td>0.064192</td>\n",
+       "      <td>0.021335</td>\n",
+       "      <td>0.028935</td>\n",
+       "      <td>0.012263</td>\n",
+       "      <td>0.011230</td>\n",
+       "      <td>0.003566</td>\n",
+       "      <td>0.005862</td>\n",
+       "      <td>0.003746</td>\n",
+       "      <td>0.003779</td>\n",
+       "      <td>...</td>\n",
        "      <td>1.011576e-08</td>\n",
        "      <td>-5.395931e-15</td>\n",
        "      <td>-6.859661e-11</td>\n",
@@ -327,26 +400,34 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           i1        i2        i3            i4            i5            i6  \\\n",
-       "id                                                                            \n",
-       "355  0.168084  0.000615  0.000131  5.717751e-05  3.808159e-09 -1.417337e-06   \n",
-       "356  0.164507  0.001087  0.000043  1.011576e-08 -5.395931e-15 -6.859661e-11   \n",
-       "\n",
-       "               i7   probmax   energia  entropia  contraste  homogeneidade  \\\n",
+       "         df01      df02      df03      df04      df05      df06      df07  \\\n",
        "id                                                                          \n",
-       "355  3.153370e-09  0.890374  3.170342  6.571618 -30.712990       3.763049   \n",
-       "356  3.907229e-15  0.874335  3.056052  7.561434 -37.105195       3.722622   \n",
+       "355  0.087961  0.054059  0.025210  0.027471  0.012834  0.008374  0.004592   \n",
+       "356  0.018333  0.064192  0.021335  0.028935  0.012263  0.011230  0.003566   \n",
        "\n",
-       "     correlacao  \n",
-       "id               \n",
-       "355    0.000304  \n",
-       "356    0.000269  "
+       "         df08      df09      df10  ...            i4            i5  \\\n",
+       "id                                 ...                               \n",
+       "355  0.005163  0.004747  0.003075  ...  5.717751e-05  3.808159e-09   \n",
+       "356  0.005862  0.003746  0.003779  ...  1.011576e-08 -5.395931e-15   \n",
+       "\n",
+       "               i6            i7   probmax   energia  entropia  contraste  \\\n",
+       "id                                                                         \n",
+       "355 -1.417337e-06  3.153370e-09  0.890374  3.170342  6.571618 -30.712990   \n",
+       "356 -6.859661e-11  3.907229e-15  0.874335  3.056052  7.561434 -37.105195   \n",
+       "\n",
+       "     homogeneidade  correlacao  \n",
+       "id                              \n",
+       "355       3.763049    0.000304  \n",
+       "356       3.722622    0.000269  \n",
+       "\n",
+       "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,16 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "279c84ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dts_x = df[ALL]\n",
-    "dts_y = df['classe']"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# dts_x = df[ALL]\n",
+    "dts_y = df['classe']\n",
+    " \n",
+    "# Aplicando a normalização ao conjundo de dados\n",
+    "dts_x = StandardScaler().fit_transform(df[ALL])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "56f6cd8f",
    "metadata": {},
@@ -384,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "f69bd690",
    "metadata": {},
    "outputs": [],
@@ -400,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "e54edf97",
    "metadata": {},
    "outputs": [
@@ -424,6 +511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "027a4b5e",
    "metadata": {},
@@ -433,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e65be869",
    "metadata": {},
    "outputs": [
@@ -441,8 +529,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.47, Desvio Padrao: 0.08\n",
-      "Intervalo de confiança (95%): [0.44,0.50]\n"
+      "Media: 0.64, Desvio Padrao: 0.07\n",
+      "Intervalo de confiança (95%): [0.61,0.66]\n"
      ]
     }
    ],
@@ -451,15 +539,14 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "parameters = {'bagging__n_estimators':n_estimators}\n",
     "\n",
-    "bg = BaggingClassifier(estimator=GaussianNB(), random_state=11)\n",
+    "bg = BaggingClassifier(random_state=11)\n",
     "\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('bagging', bg)])\n",
     "\n",
-    "clf = GridSearchCV(pipe, parameters,cv=4)\n",
+    "clf = GridSearchCV(pipe, parameters, cv=4)\n",
     "\n",
     "scores2 = cross_val_score(clf, dts_x, dts_y, cv = rkf)\n",
     "\n",
@@ -467,6 +554,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70389146",
    "metadata": {},
@@ -476,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "2e94ac23",
    "metadata": {
     "scrolled": true
@@ -486,8 +574,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.39, Desvio Padrao: 0.08\n",
-      "Intervalo de confiança (95%): [0.36,0.42]\n"
+      "Media: 0.34, Desvio Padrao: 0.03\n",
+      "Intervalo de confiança (95%): [0.33,0.35]\n"
      ]
     }
    ],
@@ -496,7 +584,7 @@
     "\n",
     "parameters = {'boosting__n_estimators':n_estimators}\n",
     "\n",
-    "adb = AdaBoostClassifier(estimator=GaussianNB(), random_state=11)\n",
+    "adb = AdaBoostClassifier(random_state=11)\n",
     "\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('boosting',adb)])\n",
     "\n",
@@ -508,43 +596,33 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca3aa9dc",
    "metadata": {},
    "source": [
-    "### RandomFlorest"
+    "### RandomForest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "b216c2b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Media: 0.65, Desvio Padrao: 0.07\n",
-      "Intervalo de confiança (95%): [0.63,0.68]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "scalar = StandardScaler()\n",
+    "parameters = {'randomforest__n_estimators':n_estimators}\n",
     "\n",
-    "rF = RandomForestClassifier()\n",
+    "rF = RandomForestClassifier(random_state=11)\n",
     "\n",
-    "pipeline = Pipeline([('transformer', scalar), ('estimator', rF)])\n",
+    "pipeline = Pipeline([('scaler', StandardScaler()), ('randomforest', rF)])\n",
     "\n",
-    "grade={'estimator__n_estimators':n_estimators}\n",
+    "gs = GridSearchCV(pipeline, parameters, cv=4)\n",
     "\n",
-    "gs = GridSearchCV(estimator=pipeline, param_grid = grade, cv = 4)\n",
-    "\n",
-    "scores3 = cross_val_score(gs, dts_x, dts_y, cv = rkf)\n",
+    "scores3 = cross_val_score(gs, dts_x, dts_y, cv=rkf)\n",
     "\n",
     "classification_report(scores3)"
    ]
